# nautilus

./: .gitlab-ci.yml  CONTRIBUTING.md
build-aux/flatpak/: org.gnome.Nautilus.json
data/: lineup-parameters
po/: ro.po  sl.po  tr.po  uk.po  zh_CN.po
src/: nautilus-app-chooser.c  nautilus-batch-rename-dialog.c  nautilus-bookmark.c  nautilus-directory-async.c  nautilus-directory-private.h  nautilus-directory.c  nautilus-directory.h  nautilus-enums.h  nautilus-file-private.h  nautilus-file-utilities.h  nautilus-file.c  nautilus-file.h  nautilus-filename-validator.c  nautilus-files-view.c  nautilus-grid-cell.c  nautilus-grid-view.c  nautilus-image.c  nautilus-internal-place-file.c  nautilus-list-base.c  nautilus-list-view.c  nautilus-mime-actions.c  nautilus-mime-actions.h  nautilus-name-cell.c  nautilus-network-directory.c  nautilus-operations-ui-manager.c  nautilus-pathbar.c  nautilus-preferences-dialog.c  nautilus-properties.c  nautilus-query-editor.c  nautilus-search-directory-file.c  nautilus-search-directory.c  nautilus-search-engine-model.c  nautilus-shell-search-provider.c  nautilus-starred-directory.c  nautilus-thumbnails.c  nautilus-ui-utilities.c  nautilus-vfs-directory.c  nautilus-vfs-file.c  nautilus-view-cell.c  nautilus-view-cell.h  (+2 more)
src/resources/: nautilus.gresource.xml.in
src/resources/ui/: nautilus-preferences-dialog.blp  (+2 more)
test/: file-torture.py  meson.build  test-utilities.c  test-utilities.h
test/display/: test-file-operations-create.c  test-nautilus-directory-async.c
test/displayless/: test-directory.c  test-file.c  test-thumbnails.c
